# standard-substrate

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  docker-compose.yml  rust-toolchain  rust-toolchain.toml  three
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release_notes_config.json
.github/actions/install-rust/: action.yml
.github/actions/srtool/: action.yml
.github/workflows/: binary-build.yml  docker-build.yml  fmt-checks-tests.yml  labeler.yml  main.yml  publish-release.yml  runtime-build.yml
Docker/: Docker.md  Dockerfile  Dockerfile.release  docker-compose.build.yml  docker-compose.ecs.yml  docker-compose.yml  entrypoint.sh  standard-collator.release
chains/opportunity_standalone/db/: IDENTITY  LOG  OPTIONS-000031  OPTIONS-000033
docs/: parachain-template.md
frontend/substrate-front-end-template/src/config/: types.json
node/: Cargo.toml
node/opportunity/: Cargo.toml
node/opportunity/spec/: opportunity.json  opportunity_raw.json
node/opportunity/src/: backup.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
node/standard/: Cargo.toml
node/standard/spec/: standard_barocco_raw.json  standard_kusama_raw.json  standard_rococo_raw.json
node/standard/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
orml/: Cargo.dev.toml
orml/auction/: Cargo.toml
orml/authority/: Cargo.toml
orml/bencher/: Cargo.toml
orml/benchmarking/: Cargo.toml
orml/currencies/: Cargo.toml
orml/gradually-update/: Cargo.toml
orml/nft/: Cargo.toml
orml/oracle/: Cargo.toml
orml/oracle/rpc/: Cargo.toml
orml/oracle/rpc/runtime-api/: Cargo.toml
orml/rewards/: Cargo.toml
orml/tokens/: Cargo.toml
orml/traits/: Cargo.toml
orml/unknown-tokens/: Cargo.toml
orml/utilities/: Cargo.toml
orml/vesting/: Cargo.toml
orml/weight-meter/: Cargo.toml
orml/xcm-support/: Cargo.toml
orml/xtokens/: Cargo.toml
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: lib.rs  mock.rs  tests.rs
pallets/chainbridge/: Cargo.toml
pallets/chainbridge/src/: lib.rs  mock.rs  tests.rs
pallets/market/: Cargo.toml
pallets/market/src/: lib.rs  math.rs  mock.rs  tests.rs
pallets/oracle/: Cargo.toml  README.md
pallets/oracle-staking/: Cargo.toml
pallets/oracle-staking/reward-curve/: Cargo.toml
pallets/oracle-staking/reward-fn/: Cargo.toml
pallets/oracle-staking/src/: lib.rs  slashing.rs
pallets/oracle/src/: lib.rs  math.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
pallets/token/: Cargo.toml  README.md
pallets/token/src/: lib.rs  mock.rs  weights.rs
pallets/vault/: Cargo.toml
pallets/vault/src/: lib.rs  math.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
resources/: para-200-genesis  para-200.wasm  standard-local-plain.json  standard-local.json
runtime/: Cargo.toml
runtime/opportunity/: Cargo.toml  build.rs
runtime/opportunity/src/: constants.rs  impls.rs  lib.rs  precompiles.rs  voter_bags.rs
runtime/src/: constants.rs  impls.rs  lib.rs
runtime/standard/: Cargo.toml  build.rs
runtime/standard/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
scripts/: init.sh  oneline-upgrade.sh  oneline.sh  opportunity-install.sh  opportunity-upgrade.sh  rust-init.sh  unorthodox-install.sh  unorthodox-upgrade.sh
traits/: Cargo.toml
traits/src/: lib.rs
