[profile.release]
panic = "unwind"

[workspace]
resolver = "2"

members = [
    "node/standard",
    "node/opportunity",
    "pallets/asset-registry",
    "pallets/market",
    "pallets/oracle",
    "pallets/vault",
    "pallets/chainbridge",
    "runtime/standard",
    "runtime/opportunity",
    "primitives"
]
