[package]
name = "primitives"
description = "interfaces in runtime modules to interact between them in Standard substrate implementation
version = "0.1.0"
authors = ["Standard Tech"]
edition = "2018"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", version = "3.0.0", default-features = false }
primitives = { path = "./primitives", default-features = false }


[features]
default = ["std"]
std = [
   "primitives/std",
	"sp-std/std",
]
